# currybo

./: LICENSE  Makefile  README.md  pyproject.toml
benchmarks/: figure_chemistry_methods.py  figure_complete.py  figure_joint.py  figure_sequential.py  figure_single.py  visualize.py
benchmarks/benchmark_frac/: benchmark_frac_complete_monitoring.py  benchmark_frac_oneLA.py  benchmark_frac_single_substrate.py  benchmark_frac_twoLAjoint.py  benchmark_frac_twoLArand.py  benchmark_frac_twoLAvar.py
benchmarks/benchmark_mean/: benchmark_mean_complete_monitoring.py  benchmark_mean_oneLA.py  benchmark_mean_single_substrate.py  benchmark_mean_twoLAjoint.py  benchmark_mean_twoLArand.py  benchmark_mean_twoLAvar.py
benchmarks/data-analysis/: data_analysis_frac.py  data_analysis_frac_fps.py  data_analysis_frac_smart.py  data_analysis_mean.py  data_analysis_mean_fps.py  data_analysis_mean_smart.py  figure_data_analysis.py
data-analysis/Cernak/: eda.ipynb
data-analysis/Denmark/: Denmark_original.csv  eda.ipynb
data-analysis/borylation/: eda.ipynb
data-analysis/deoxyfluorination/: eda.ipynb
src/currybo/: __init__.py  __main__.py
src/currybo/acquisition_strategies/: __init__.py  base.py  lookahead_acquisition.py  q_probability_optimality.py  q_sequential_acquisition.py  sequential_acquisition.py  utility_function.py
src/currybo/campaign/: __init__.py  campaign.py
src/currybo/cli/: __init__.py  cli.py  interface.toml
tests/: test_campaign.py
tests/test_acquisition_strategies/: test_base.py  test_sequential_acquisition.py  test_utility_function.py
tests/test_aggregation_functions/: test_base.py  test_mean.py  test_mean_squared_error.py  test_min.py  test_sigmoid.py
tests/test_surrogate_models/: test_additive_structure_gp.py  test_base.py  test_simple_gp.py
tests/test_test_functions/: test_problem_set.py
(+23 files in other folders)
