[project]
name = "currybo"
version = "0.1.0"
requires-python = ">=3.9"

authors = [
  {name = "Stefan P. Schmid", email = "stefan.schmid@chem.ethz.ch"},
  {name = "Felix Strieth-Kalthoff", email = "strieth-kalthoff@uni-wuppertal.de"},
  {name = "Mohammad Haddadnia", email = "mohammad_haddadnia@dfci.harvard.edu"},
  {name = "Alexander Schoch", email = "schochal@ethz.ch"},
  {name = "Ella Rajaonson", email = "ella.rajaonson@mail.utoronto.ca"}
]

dependencies = [
    "torch >= 2.2.1",
    "botorch >= 0.10.0",
    "gpytorch >= 1.11",
    "matplotlib >= 3.8.3",
    "imageio >= 2.34.0",
    "pandas >= 2.2.1",
    "rdkit >= 2023.9.5",
    "gauche >= 0.1.6",
    "pypalettes",
    "pub_ready_plots",
    "botier",
]

license = "MIT"
license-files = ["LICENSE*"]
readme = "README.md"
description = "Bayesian Optimization for general parameters"

[project.optional-dependencies]
dev = [
    "black>=21.12b0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
]

[project.scripts]
currybo = "currybo.cli:cli"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"*" = ["interface.toml"]

[tool.pytest.ini_options]
addopts = "--cov=currybo --cov-report xml --cov-report html --cov-report term --cov-config=pyproject.toml --color=yes"
testpaths = "tests/"
python_files = "test_*.py"
pythonpath = "."

[tool.coverage.run]
# branch = true
source = ["src"]
omit = ["*__init__.py", "visualizer.py", "src/currybo/test_functions/chemistry_datasets/*.py"]
command_line = "-m pytest -v"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.flake8]
max-line-length = 160
ignore = "D100, D104, D107"
